--- a/styles/globals.css
+++ b/styles/globals.css
@@ -3,3 +3,16 @@
   padding: 0;
   margin: 0;
 }
+
+::-webkit-scrollbar-track {
+  background-color: #F4F4F4;
+  
+}
+::-webkit-scrollbar {
+  width: 8px;
+  background: #F4F4F4;
+}
+::-webkit-scrollbar-thumb {
+  background: #12BB59;
+  border-radius: 5px;
+}
