--- a/styles/globals.css
+++ b/styles/globals.css
@@ -16,3 +16,15 @@
   background: #12BB59;
   border-radius: 5px;
 }
+
+
+body{
+  position: relative;
+  padding-bottom: 14rem;
+  min-height: 100%;
+}
+
+
+html{
+  height: 100%;
+}
